[gd_scene format=4 uid="uid://c4cms0dp03rem"]

[ext_resource type="PackedScene" uid="uid://4aghjpy7mbvk" path="res://scenes/game_ui.tscn" id="1_ggudt"]
[ext_resource type="Script" uid="uid://dvmkjcuu4vlvu" path="res://scripts/multimaskedtilemap.gd" id="1_hlk2l"]
[ext_resource type="TileSet" uid="uid://0ri8qrel1dpj" path="res://resources/tilesets/testtileset.tres" id="2_72a20"]
[ext_resource type="Script" uid="uid://cqfbx47wt6d28" path="res://scripts/masked_layer.gd" id="3_fgnd1"]
[ext_resource type="PackedScene" uid="uid://bn46343xobuti" path="res://scenes/prefabs/ExitDoor.tscn" id="4_njiwr"]
[ext_resource type="PackedScene" uid="uid://buc8xfo8nwnfy" path="res://scenes/prefabs/player.tscn" id="5_m8ela"]
[ext_resource type="PackedScene" uid="uid://v0bxw5r7bav0" path="res://scenes/prefabs/CameraFollow.tscn" id="6_86vqt"]
[ext_resource type="Shader" uid="uid://g2kx26x1mj7r" path="res://shaders/spotlight.gdshader" id="9_xornt"]
[ext_resource type="Script" uid="uid://b7qtr6cokots2" path="res://scripts/death_spotlight.gd" id="10_ggudt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5a7mx"]
shader = ExtResource("9_xornt")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/radius = 2.0

[sub_resource type="Animation" id="Animation_xornt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_ggudt"]
resource_name = "spotlight"
length = 1.1666666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.93333334, 1.2, 1.5333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [2.0, -0.1, -0.1, 2.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../PlayerCharacter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1666666),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn"
}]
}

[sub_resource type="Animation" id="Animation_nendb"]
resource_name = "spotlight_exit"
length = 1.1666666
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.93333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, -0.1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../ExitDoor")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"go_to_next_level"
}]
}

[sub_resource type="Animation" id="Animation_12kvg"]
resource_name = "spotlight_spawn"
length = 0.33333334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333325),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.1, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nendb"]
_data = {
&"RESET": SubResource("Animation_xornt"),
&"spotlight_death": SubResource("Animation_ggudt"),
&"spotlight_exit": SubResource("Animation_nendb"),
&"spotlight_spawn": SubResource("Animation_12kvg")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6v23s"]
distance = -192.0

[node name="LevelTutorial" type="Node2D" unique_id=1082980837]

[node name="MultiMaskedTileMap" type="Node2D" parent="." unique_id=1849164173 node_paths=PackedStringArray("player")]
script = ExtResource("1_hlk2l")
player = NodePath("../PlayerCharacter")

[node name="MaskedTileMapLayer" type="TileMapLayer" parent="MultiMaskedTileMap" unique_id=1132642554]
tile_map_data = PackedByteArray("AAD3/wIAAgAAAAAAAAD4/wIAAgAAAAAAAAD5/wIAAgAAAAAAAAD6/wIAAgAAAAAAAAD7/wIAAgAAAAAAAAD8/wIAAgAAAAAAAAD9/wIAAgAAAAAAAAD+/wIAAgAAAAAAAAD//wIAAgAAAAAAAAABAAIAAgAAAAIAAAAFAAIAAgAAAAIAAAAIAAIAAgAAAAIAAAALAAIAAgAAAAIAAAAAAAEAAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAAFAAEAAgAAAAIAAAD9/wMAAgAAAAIAAAD9/wQAAgAAAAIAAAD9/wUAAgAAAAIAAAD9/wYAAgAAAAIAAAD9/wcAAgAAAAIAAAD9/wgAAgAAAAIAAAD9/wkAAgAAAAIAAAD9/woAAgAAAAIAAAD9/wsAAgAAAAIAAAD9/wwAAgAAAAIAAAABAAMAAgAAAAIAAAABAAQAAgAAAAIAAAABAAUAAgAAAAIAAAABAAYAAgAAAAIAAAABAAcAAgAAAAIAAAABAAgAAgAAAAIAAAABAAkAAgAAAAIAAAABAAoAAgAAAAIAAAABAAsAAgAAAAIAAAABAAwAAgAAAAIAAAAFAAMAAgAAAAIAAAAFAAQAAgAAAAIAAAAFAAUAAgAAAAIAAAAFAAYAAgAAAAIAAAAFAAcAAgAAAAIAAAAFAAgAAgAAAAIAAAAFAAkAAgAAAAIAAAAFAAoAAgAAAAIAAAAFAAsAAgAAAAIAAAAFAAwAAgAAAAIAAAAIAAMAAgAAAAIAAAAIAAQAAgAAAAIAAAAIAAUAAgAAAAIAAAAIAAYAAgAAAAIAAAAIAAcAAgAAAAIAAAAIAAgAAgAAAAIAAAAIAAkAAgAAAAIAAAAIAAoAAgAAAAIAAAAIAAsAAgAAAAIAAAAIAAwAAgAAAAIAAAALAAMAAgAAAAIAAAALAAQAAgAAAAIAAAALAAUAAgAAAAIAAAALAAYAAgAAAAIAAAALAAcAAgAAAAIAAAALAAgAAgAAAAIAAAALAAkAAgAAAAIAAAALAAoAAgAAAAIAAAALAAsAAgAAAAIAAAALAAwAAgAAAAIAAADy/wIAAgAAAAAAAADy/wwAAAAAAAEAAADz/wIAAgAAAAAAAADz/wwAAAAAAAEAAAD0/wIAAgAAAAAAAAD0/wMAAgAAAAIAAAD0/wQAAgAAAAIAAAD0/wUAAgAAAAIAAAD0/wYAAgAAAAIAAAD0/wcAAgAAAAIAAAD0/wgAAgAAAAIAAAD0/wkAAgAAAAIAAAD0/woAAgAAAAIAAAD0/wsAAgAAAAIAAAD0/wwAAgAAAAIAAAD1/wIAAgAAAAAAAAD2/wIAAgAAAAAAAAAFAAAAAgAAAAIAAAAIAAAAAgAAAAIAAAAIAAEAAgAAAAIAAAAFAP//AgAAAAIAAAAIAP7/AgAAAAIAAAAIAP//AgAAAAIAAAALAP7/AgAAAAIAAAALAP//AgAAAAIAAAALAAAAAgAAAAIAAAALAAEAAgAAAAIAAAAIAPv/AgAAAAIAAAAIAPz/AgAAAAIAAAAIAP3/AgAAAAIAAAALAPv/AgAAAAIAAAALAPz/AgAAAAIAAAALAP3/AgAAAAIAAAAKAPn/AgAAAAAAAAALAPn/AgAAAAAAAAALAPr/AgAAAAIAAAAMAPn/AgAAAAAAAAANAPn/AgAAAAAAAAAQAPn/AgAAAAAAAAARAPn/AgAAAAAAAAASAPn/AgAAAAAAAAATAPn/AgAAAAAAAAAUAPn/AgAAAAAAAAAaAP7/AgAAAAAAAAAbAP7/AgAAAAAAAAAcAP7/AgAAAAAAAAAdAP7/AgAAAAAAAAAeAP7/AgAAAAAAAAAXAP3/AgAAAAAAAAAYAP3/AgAAAAAAAAAVAP3/AgAAAAAAAAAWAP3/AgAAAAAAAAADAP7/AgAAAAAAAAAEAP7/AgAAAAAAAAAFAP7/AgAAAAAAAAAGAP7/AgAAAAAAAAAHAPr/AgAAAAAAAAAIAPr/AgAAAAAAAAAJAPr/AgAAAAAAAAAfAP//AgAAAAAAAAAgAP//AgAAAAAAAAAhAP//AgAAAAAAAAAiAP//AgAAAAAAAAAjAP//AgAAAAAAAAAkAP7/AgAAAAAAAAAlAP7/AgAAAAAAAAAZAP3/AgAAAAAAAADx/wIAAgABAAIAAADw//D/AgABAAIAAADw//H/AgABAAIAAADw//L/AgABAAIAAADw//P/AgABAAIAAADw//T/AgABAAIAAADw//X/AgABAAIAAADw//b/AgABAAIAAADw//f/AgABAAIAAADw//j/AgABAAIAAADw//n/AgABAAIAAADw//r/AgABAAIAAADw//v/AgABAAIAAADw//z/AgABAAIAAADw//3/AgABAAIAAADw//7/AgABAAIAAADw////AgABAAIAAADw/wAAAgABAAIAAADw/wEAAgABAAIAAADw/wIAAgABAAIAAAD0/w0AAgAAAAIAAAD9/w0AAgAAAAIAAAABAA0AAgAAAAIAAAAFAA0AAgAAAAIAAAAFAA4AAgAAAAIAAAAIAA0AAgAAAAIAAAAIAA4AAgAAAAIAAAALAA0AAgAAAAIAAAALAA4AAgAAAAIAAAALAA8AAgAAAAIAAAALABAAAgAAAAIAAAA=")
tile_set = ExtResource("2_72a20")
script = ExtResource("3_fgnd1")

[node name="MaskedTileMapLayer2" type="TileMapLayer" parent="MultiMaskedTileMap" unique_id=1704380710]
tile_map_data = PackedByteArray("AAAvAP7/AgADAAMAAAAvAP//AgACAAMAAAAvAAAAAgADAAIAAAAvAAEAAgABAAIAAAAvAAIAAgADAAMAAAAvAAMAAgADAAMAAAAvAAQAAgADAAMAAAAvAAUAAgABAAMAAAAvAAYAAgACAAIAAAAvAAcAAgABAAMAAAAvAAgAAgABAAMAAAAvAAkAAgACAAIAAAAvAAoAAgABAAIAAAAvAAsAAgACAAIAAAAvAAwAAgABAAIAAAAvAA0AAgACAAIAAAAvAA4AAgABAAIAAAAvAA8AAgABAAIAAAAvABAAAgABAAMAAAAvABEAAgACAAIAAAAvABIAAgADAAMAAAAvABMAAgABAAMAAAAwAP7/AgABAAIAAAAwAP//AgACAAMAAAAwAAAAAgABAAIAAAAwAAEAAgACAAIAAAAwAAIAAgABAAIAAAAwAAMAAgABAAIAAAAwAAQAAgABAAIAAAAwAAUAAgACAAIAAAAwAAYAAgABAAIAAAAwAAcAAgADAAIAAAAwAAgAAgABAAIAAAAwAAkAAgADAAMAAAAwAAoAAgADAAMAAAAwAAsAAgADAAMAAAAwAAwAAgABAAMAAAAwAA0AAgABAAMAAAAwAA4AAgABAAIAAAAwAA8AAgABAAMAAAAwABAAAgABAAMAAAAwABEAAgADAAMAAAAwABIAAgACAAMAAAAwABMAAgADAAIAAAAxAP7/AgABAAIAAAAxAP//AgACAAIAAAAxAAAAAgABAAIAAAAxAAEAAgACAAMAAAAxAAIAAgACAAMAAAAxAAMAAgABAAIAAAAxAAQAAgABAAIAAAAxAAUAAgABAAIAAAAxAAYAAgADAAMAAAAxAAcAAgACAAIAAAAxAAgAAgACAAIAAAAxAAkAAgACAAMAAAAxAAoAAgACAAIAAAAxAAsAAgADAAIAAAAxAAwAAgABAAIAAAAxAA0AAgADAAIAAAAxAA4AAgACAAMAAAAxAA8AAgADAAMAAAAxABAAAgABAAIAAAAxABEAAgADAAIAAAAxABIAAgADAAIAAAAxABMAAgACAAMAAAAqAAEAAgABAAMAAAAqAAIAAgACAAIAAAAqAAMAAgACAAMAAAAqAAQAAgADAAMAAAAqAAUAAgABAAIAAAAqAAYAAgABAAMAAAAqAAcAAgADAAIAAAAqAAgAAgABAAMAAAAqAAkAAgABAAMAAAAqAAoAAgADAAMAAAAqAAsAAgACAAMAAAAqAAwAAgACAAIAAAAqAA0AAgACAAIAAAAqAA4AAgABAAMAAAAqAA8AAgACAAMAAAAqABAAAgABAAIAAAAqABEAAgABAAIAAAAqABIAAgABAAIAAAAqABMAAgABAAMAAAAqABQAAgACAAIAAAArAAEAAgABAAMAAAArAAIAAgABAAIAAAArAAMAAgADAAIAAAArAAQAAgADAAMAAAArAAUAAgADAAIAAAArAAYAAgABAAMAAAArAAcAAgABAAMAAAArAAgAAgADAAIAAAArAAkAAgACAAIAAAArAAoAAgABAAMAAAArAAsAAgABAAIAAAArAAwAAgACAAIAAAArAA0AAgABAAMAAAArAA4AAgADAAIAAAArAA8AAgACAAIAAAArABAAAgACAAMAAAArABEAAgABAAMAAAArABIAAgACAAMAAAArABMAAgADAAIAAAArABQAAgADAAMAAAAsAAEAAgADAAMAAAAsAAIAAgACAAMAAAAsAAMAAgACAAMAAAAsAAQAAgABAAIAAAAsAAUAAgABAAIAAAAsAAYAAgADAAMAAAAsAAcAAgABAAIAAAAsAAgAAgADAAIAAAAsAAkAAgACAAMAAAAsAAoAAgACAAMAAAAsAAsAAgACAAMAAAAsAAwAAgADAAIAAAAsAA0AAgABAAMAAAAsAA4AAgACAAMAAAAsAA8AAgABAAIAAAAsABAAAgADAAMAAAAsABEAAgADAAIAAAAsABIAAgABAAMAAAAsABMAAgACAAIAAAAsABQAAgABAAIAAAA2APz/AgADAAMAAAA2AP3/AgABAAIAAAA3APz/AgACAAIAAAA3AP3/AgACAAMAAAA4APz/AgABAAIAAAA4AP3/AgABAAMAAAA5APz/AgACAAIAAAA5AP3/AgACAAIAAAA6APz/AgADAAIAAAA6AP3/AgABAAMAAAA7APz/AgABAAMAAAA7AP3/AgABAAMAAAA8APz/AgACAAIAAAA8AP3/AgADAAIAAAA9APz/AgACAAIAAAA9AP3/AgACAAIAAAA+APz/AgACAAMAAAA+AP3/AgABAAMAAAA/APz/AgADAAIAAAA/AP3/AgACAAMAAABAAPz/AgABAAIAAABAAP3/AgACAAMAAABBAPz/AgADAAIAAABBAP3/AgACAAIAAABCAPz/AgABAAMAAABCAP3/AgACAAIAAABDAPz/AgACAAIAAABDAP3/AgADAAIAAABEAPz/AgADAAMAAABEAP3/AgABAAMAAABFAPz/AgADAAIAAABFAP3/AgADAAIAAABGAPz/AgADAAMAAABGAP3/AgADAAIAAABFAPP/AgACAAMAAABFAPT/AgABAAMAAABFAPX/AgACAAIAAABFAPb/AgADAAMAAABFAPf/AgADAAIAAABFAPj/AgABAAIAAABFAPn/AgADAAIAAABFAPr/AgACAAIAAABFAPv/AgACAAMAAABGAPP/AgABAAMAAABGAPT/AgABAAMAAABGAPX/AgACAAMAAABGAPb/AgABAAIAAABGAPf/AgACAAIAAABGAPj/AgACAAIAAABGAPn/AgACAAIAAABGAPr/AgACAAIAAABGAPv/AgACAAMAAABEAPL/AgADAAMAAABFAPL/AgABAAIAAABGAPL/AgABAAIAAABEAPH/AgABAAIAAABFAPH/AgABAAMAAABDAPH/AgACAAMAAABDAPD/AgACAAMAAABCAPD/AgABAAIAAABBAPD/AgACAAIAAABAAO//AgADAAMAAAA/AO//AgABAAMAAAA+AO7/AgADAAIAAAA+AO3/AgADAAMAAAA/AO7/AgABAAIAAABAAO7/AgABAAIAAABBAO//AgABAAIAAABCAO//AgACAAMAAABEAPD/AgADAAIAAAA9AO7/AgABAAIAAAA8AO//AgADAAMAAAA7AO//AgABAAMAAAA6APD/AgADAAIAAAA5APD/AgADAAMAAAA4APH/AgACAAMAAAA3APH/AgABAAIAAAA4APD/AgABAAIAAAA6AO//AgADAAIAAAA8AO7/AgABAAMAAAA9AO3/AgACAAMAAAA7AO7/AgADAAIAAAA5AO//AgACAAMAAAA3APD/AgADAAMAAAA=")
tile_set = ExtResource("2_72a20")
script = ExtResource("3_fgnd1")
mask_number = 1

[node name="PlayerCharacter" parent="." unique_id=614979792 instance=ExtResource("5_m8ela")]
position = Vector2(-94, -7)

[node name="ExitDoor" parent="." unique_id=45997899 instance=ExtResource("4_njiwr")]
z_index = -1
position = Vector2(504, -32)

[node name="CameraFollow" parent="." unique_id=467601528 node_paths=PackedStringArray("following") instance=ExtResource("6_86vqt")]
limit_left = -320
limit_bottom = 193
limit_smoothed = true
editor_draw_limits = true
following = NodePath("../PlayerCharacter")
follow_speed = 20

[node name="EffectsLayer" type="CanvasLayer" parent="CameraFollow" unique_id=1087320890]

[node name="DeathSpotlight" type="ColorRect" parent="CameraFollow/EffectsLayer" unique_id=1096391294]
material = SubResource("ShaderMaterial_5a7mx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_ggudt")
metadata/_edit_use_anchors_ = true

[node name="EffectsAnimator" type="AnimationPlayer" parent="CameraFollow/EffectsLayer" unique_id=1816478192]
root_node = NodePath("../DeathSpotlight")
libraries/ = SubResource("AnimationLibrary_nendb")

[node name="GameUi" parent="CameraFollow/EffectsLayer" unique_id=1129233128 node_paths=PackedStringArray("player_character") instance=ExtResource("1_ggudt")]
player_character = NodePath("../../../PlayerCharacter")
metadata/_edit_use_anchors_ = true

[node name="DeathPlane" type="Area2D" parent="." unique_id=20074737]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathPlane" unique_id=917751410]
shape = SubResource("WorldBoundaryShape2D_6v23s")

[connection signal="death" from="PlayerCharacter" to="CameraFollow/EffectsLayer/DeathSpotlight" method="_on_player_character_death"]
[connection signal="player_reached_exit" from="ExitDoor" to="PlayerCharacter" method="_on_exit_door_player_reached_exit"]
[connection signal="player_reached_exit" from="ExitDoor" to="CameraFollow/EffectsLayer/DeathSpotlight" method="_on_exit_door_player_reached_exit"]
[connection signal="body_entered" from="DeathPlane" to="PlayerCharacter" method="_on_death_plane_body_entered"]
